# Gesti-n-de-Construcci-n-Residencial

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  B6_MATERIALIZATION_STATE.md  Dockerfile  EXECUTION_STATE.md  MANUAL_PASO_A_PASO.md  README.md  docker-compose.yml  render.yaml
nexora_app/: MANIFEST.in  README.md  pyproject.toml
nexora_app/nexora/: hooks.py  install.py  modules.txt  patches.txt  permissions.py  staging.py
nexora_app/nexora/config/: desktop.py
nexora_app/nexora/contracts/: __init__.py  api.py  core.py  service.py
nexora_app/nexora/directory/: __init__.py  api.py  common.py  compliance_service.py  consolidation_service.py  constants.py  core.py  duplicate_service.py  entity_read_service.py  entity_write_service.py  input_helpers.py  lock_helpers.py  role_service.py  service.py  view_helpers.py
nexora_app/nexora/financial/: analytics.py  catalog.py  commitments.py  context.py  core.py  db.py  evidence.py  evidence_core.py  model_utils.py  operations.py  reference_rules.py  references.py  seeds.py  service.py  sources.py
nexora_app/nexora/fixtures/: role.json
nexora_app/nexora/purchases/: __init__.py  core.py  request_core.py  request_service.py  service.py
nexora_app/nexora/tests/: concurrency_probe.py  contract_concurrency_probe.py  directory_concurrency_probe.py  test_app_contract.py  test_contract_contract.py  test_contract_core.py  test_contract_integration.py  test_directory_contract.py  test_directory_core.py  test_directory_integration.py  test_evidence_contract.py  test_evidence_core.py  (+16 more)
(+554 files in other folders)
