[project]
name = "nexora"
authors = [
    { name = "NEXORA", email = "noreply@nexora.local" }
]
description = "Gestión Integral de Fondos, Proyectos y Operaciones"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.40.4,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
